--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,9 @@
         "algorithm": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "set": "cpp",
+        "__tree": "cpp",
+        "map": "cpp"
     }
 }
